rp2_gpio_lib = static_library('tart-rp2-gpio', 'gpio/rp2-gpio.cpp',
	dependencies : tart_core_dep)
rp2_gpio_dep = declare_dependency(link_with : rp2_gpio_lib)

rp2_resets_lib = static_library('tart-rp2-resets', 'reset/rp2-resets.cpp',
	dependencies : tart_core_dep)
rp2_resets_dep = declare_dependency(link_with : rp2_resets_lib)
